# ambilight-iskarna

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  run.ps1
docs/: migrations.md
src/ambilight/: __init__.py  __main__.py  main.py
src/ambilight/analysis/: dark_detector.py  dominant_color.py  smoothing.py
src/ambilight/capture/: frame_provider.py  win_capture.py
src/ambilight/config/: env_loader.py  json_store.py  models.py  validators.py
src/ambilight/ha/: client.py
src/ambilight/mjpeg/: publisher.py
src/ambilight/services/: scheduler.py  sync_controller.py
src/ambilight/state/: runtime_state.py  zone_state.py
src/ambilight/utils/: bounded_queue.py  logging.py
src/ambilight/web/: bridge.py  lan_ui_server.py  local_api.py
src/ambilight/web/static/: app.js  index.html
tests/contract/: test_local_api_core.py  test_presets_api.py  test_sync_controls.py
tests/integration/: test_analysis_pipeline.py  test_ha_client.py  test_pause_resume_diagnostics.py  test_performance_bounds.py  test_presets_flow.py
tests/unit/: test_analysis_filters.py  test_config_validation.py
